*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.2.17 ===
* Fixed improper port bindings for Compensation Delay x2 Stereo plugin.
* Fixed possible access to uninitialized memory when loading built-in resources.
* Fixed improper phase compensation between Dry and Wet channels in
  Linear Phase mode for multiband plugin series:
  * Multiband Compressor;
  * Multiband Dynamics Processor;
  * Multiband Expander;
  * Multiband Gate.
* Several bugfixes for VST3 wrapper.
* Fixed not working MIDI channel setup for the Trigger MIDI plugin series.
* Improved build tools: UI resources are now built-in only for libraries that
  need them.
* Added ISO-226:2023 loudness compensation curves to Loudness Compensator plugin series.
* Added basic GStreamer plugin support.
* Added balance knobs to LSP Slap-back Delay Stereo plugin.
* Added Suntory Hall Tokyo 3D model to Room Builder presets (contributed by Fowly).
* Updated makefile scripts related to Git checkout (contributed by Johannes Lorenz).

=== 1.2.16 ===
* Implemented Chorus plugin series.
* Implemented advanced internal buffer cleanup algorithm that does not cause high CPU load
  for Slap-Back Delay plugin.
* Added stereo correlometer to the Spectrum Analyzer plugin series.
* Added feedback to the Slap-Back delay plugin.
* Implemented Dry/Wet balance knob for the following plugin series:
  * Artistic Delay;
  * Beat Breather;
  * Compensation Delay;
  * Flanger;
  * Impulse Responses;
  * Impulse Reverb;
  * Room Builder;
  * Sampler;
  * Multisampler;
  * Slap-Back delay.
* Removed 'Amount' knob in Flanger plugin series as it can be fully replaced
  by Dry/Wet/DryWet knobs.
* Several fixes related to window position of VST3 plugin format.
* Workaround for Bitwig Studio DAW memory leak when VST3 plugins extensively use messaging.