@@ -30,7 +30,7 @@ jobs:
         run: pacman --noconfirm -Syu alsa-lib base-devel cairo carla git glibc-debug hicolor-icon-theme jack jq libglvnd libsndfile libx11 libxrandr lv2lint php valgrind gstreamer gst-plugins-base
       - uses: actions/checkout@v3
       - name: Configure project
-        run: make config STRICT=1 VERBOSE=1 FEATURES='clap doc gst jack ladspa lv2 vst2 vst3 xdg' PREFIX=/usr
+        run: make config STRICT=1 VERBOSE=1 FEATURES='clap doc gst jack ladspa lv2 ui vst2 vst3 xdg' PREFIX=/usr
       - name: Fetch project dependencies
         run: make fetch
       - name: Build project
@@ -58,7 +58,7 @@ jobs:
         run: pacman --noconfirm -Syu alsa-lib base-devel cairo carla git glibc-debug hicolor-icon-theme jack jq libglvnd libsndfile libx11 libxrandr php valgrind gstreamer gst-plugins-base
       - uses: actions/checkout@v3
       - name: Configure project
-        run: make config STRICT=1 DEBUG=1 VERBOSE=1 FEATURES='clap gst jack ladspa lv2 vst2 vst3 xdg' PREFIX=/usr
+        run: make config STRICT=1 DEBUG=1 VERBOSE=1 FEATURES='clap gst jack ladspa lv2 ui vst2 vst3 xdg' PREFIX=/usr
       - name: Fetch project dependencies
         run: make fetch
       - name: Build project
@@ -75,7 +75,7 @@ jobs:
         run: zypper --non-interactive --no-gpg-checks in tar gzip gcc gcc-c++ git make php valgrind libX11-devel libXrandr-devel Mesa-libGL-devel libjack-devel cairo-devel freetype2-devel libsndfile-devel gstreamer-devel gstreamer-plugins-base-devel
       - uses: actions/checkout@v3
       - name: Configure project
-        run: make config STRICT=1 VERBOSE=1 FEATURES='clap doc gst jack ladspa lv2 vst2 vst3 xdg' PREFIX=/usr
+        run: make config STRICT=1 VERBOSE=1 FEATURES='clap doc gst jack ladspa lv2 ui vst2 vst3 xdg' PREFIX=/usr
       - name: Fetch project dependencies
         run: make fetch
       - name: Build project
@@ -92,7 +92,7 @@ jobs:
         run: zypper --non-interactive --no-gpg-checks in tar gzip gcc gcc-c++ clang lld git make php8-cli valgrind libstdc++-devel libX11-devel libXrandr-devel Mesa-libGL-devel libjack-devel cairo-devel freetype2-devel libsndfile-devel gstreamer-devel gstreamer-plugins-base-devel
       - uses: actions/checkout@v3
       - name: Configure project
-        run: make config CC=clang CXX=clang++ STRICT=1 VERBOSE=1 FEATURES='clap doc gst jack ladspa lv2 vst2 vst3 xdg' PREFIX=/usr
+        run: make config CC=clang CXX=clang++ STRICT=1 VERBOSE=1 FEATURES='clap doc gst jack ladspa lv2 ui vst2 vst3 xdg' PREFIX=/usr
       - name: Fetch project dependencies
         run: make fetch
       - name: Build project
@@ -101,6 +101,25 @@ jobs:
         run: make install
 
   debian_stable:
+    runs-on: ubuntu-latest
+    container:
+      image: debian:stable
+    steps:
+      - name: Update repositories
+        run: apt-get update
+      - name: Install dependencies
+        run: apt-get -y install gcc g++ git make php-cli pkg-config valgrind libx11-dev libxrandr-dev libjack-dev libcairo2-dev libgl-dev libfreetype6-dev libsndfile1-dev libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev
+      - uses: actions/checkout@v3
+      - name: Configure project
+        run: make config STRICT=1 VERBOSE=1 FEATURES='clap doc gst jack ladspa lv2 ui vst2 vst3 xdg' PREFIX=/usr
+      - name: Fetch project dependencies
+        run: make fetch
+      - name: Build project
+        run: make VERBOSE=1
+      - name: Install binaries
+        run: make install
+
+  debian_stable_no_ui:
     runs-on: ubuntu-latest
     container:
       image: debian:stable
@@ -138,7 +157,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Configure project
         shell: msys2 {0}
-        run: make config STRICT=1 VERBOSE=1 FEATURES='clap ladspa lv2 vst2 vst3'
+        run: make config STRICT=1 VERBOSE=1 FEATURES='clap ladspa lv2 ui vst2 vst3'
       - name: Fetch project dependencies
         shell: msys2 {0}
         run: make fetch
