@@ -3,6 +3,8 @@
 *******************************************************************************
 
 === 1.2.17 ===
+* Plugins now can be built without UI support if the 'ui' option is omitted
+  at the configuration stage.
 * Fixed improper port bindings for Compensation Delay x2 Stereo plugin.
 * Fixed possible access to uninitialized memory when loading built-in resources.
 * Fixed improper phase compensation between Dry and Wet channels in
